--- a/src/style/about.scss
+++ b/src/style/about.scss
@@ -3,6 +3,7 @@ div.about{
     height: 100vh;
     margin-left: 50%;
     transform: translateX(-50%);
+    background: rgba(128, 128, 128, 0.571);
     border: solid 1px gray;
     box-shadow: 0 0 4px 1px rgba(255, 235, 205, 0.363);
     border-radius: 8px;
