--- a/src/style/nav.scss
+++ b/src/style/nav.scss
@@ -1,58 +1,50 @@
-.nav-div{
-    margin-left: 50%;
-    transform: translateX(-50%);
-    margin-top: 10px;
-    border: solid 1px green;
-    border-radius: 5px;
-    height: 50px;
-    width: 80%;
-    position: static;
-    
-    // background: red;
-    box-shadow: 0 0 4px 1px rgba(255, 235, 205, 0.363);
-    
-    ul{
-        margin-right: 5px;
-        display: flex;
-        // margin-top:10px;
-        justify-content: flex-end;
+   .nav-div{
+        margin-left: 50%;
+        transform: translateX(-50%);
+        margin-top: 10px;
+        border: solid 1.5px rgba(255, 255, 255, 0.516);
+        // background: rgba(255, 255, 255, 0.272);
+        border-radius: 5px;
+        height: 50px;
+        width: 80%;
+        position: sticky;
+        top: 1px;
+        overflow: hidden;
+        z-index:999;
+        background: linear-gradient(to bottom right , rgba(4, 198, 232, 0.582) , rgba(253, 14, 221, 0.591));
+        backdrop-filter:blur(5px); //this fun use to blur backsite of the div 
       
-        li{
-            margin-top: 10px;
-            text-align: flex-end;
-            // border: 1px red solid;
-            width:100px;
-            display:inline;
-            // margin-left:25px;
-            // padding: 4px;
-            text-align: center;
-
-              &:hover{
-                    background: linear-gradient( 45deg, green , transparent);
-                    border:gray 1px solid ;                border-radius: 5px;
-                    font-size: 20px;
-                    // padding: 2px;
-                    box-shadow: 0 0 5px 2px transparent;
-                    font-weight: bold;
+        
+        box-shadow: 0 2px 6px 0px rgba(255, 255, 255, 0.071);
+    
+        ul{
+            margin-right: 5px;
+            display: flex;
+            // margin-top:10px;
+            justify-content: flex-end;
+            li{
+                margin-top: 10px;
+                text-align: flex-end;
+    
+                display:inline;
+                margin-left:20px;
+                padding: 4px;
+                .link{
                     color: aliceblue;
+                    text-decoration: none;
+                    transition: 0.3s ease ;
+                    &:hover{
+                        background: fixed rgba(48, 39, 39, 0.315);
+                        color:rgba(249, 248, 248, 0.888);
+                        border-radius: 5px;
+                        font-size: 20px;
+                        box-shadow: 0 0 5px 2px rgba(48, 39, 39, 0.315);
+                    }
+    
+                    &::after{
+                        border-bottom: 2px solid red;
+                    }
                 }
-
-            .link{
-              
-                text-decoration: none;
-                transition: 0.3s ease ;
-                // &:hover{
-                //     background: fixed rgba(48, 39, 39, 0.315);
-                //     color:rgba(249, 248, 248, 0.888);
-                //     border-radius: 5px;
-                //     font-size: 20px;
-                //     box-shadow: 0 0 5px 2px rgba(48, 39, 39, 0.315);
-                // }
-
-                // &::after{
-                //     border-bottom: 2px solid red;
-                // }
             }
         }
     }
-}
